Move 'atlas' app to use webpack
This commit updates the 'atlas' app to use webpack for bundling frontend
dependencies. It furthermore adds appropriate tests.

--- a/atlas/templates/atlas/index.html
+++ b/atlas/templates/atlas/index.html
@@ -2,97 +2,28 @@
 
 {% load registry_display %}
 {% load static %}
+{% load render_bundle from webpack_loader %}
 
 {% block title %}Atlas{% endblock %}
 {% block pagetitle %}Jacobs Alumni Atlas{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static "openlayers/css/ol.css" %}" type="text/css">
-<script src="{% static "openlayers/js/ol.js" %} "></script>
-<style>
-.map {
-    height: 400px;
-    width: 100%;
-}
-</style>
+{% render_bundle "atlas" "css" %}
 {% endblock %}
-
 
 
 {% block content %}
 {% include "atlas/search_form.html" %}
 
-<p>
+<div>
     <div id="map" class="map"></div>
-</p>
-
-
-<script>
-    // get coordinates and features
-    var coords = {{people_coords}};
-    var features = coords.map(function(p) {
-        return new ol.Feature(
-            new ol.geom.Point(
-                ol.proj.fromLonLat([p[1], p[0]])
-            )
-        )
-    });
-
-    // create a source from it
-    var source = new ol.source.Vector({
-        features: features
-    });
-
-    // create a cluster from this source
-    var clusterSource = new ol.source.Cluster({
-        distance: 40,
-        source: source
-    });
-
-    // cached style computation for different sizes
-    var styleCache = {};
-
-    // create some clusters
-    var clusters = new ol.layer.Vector({
-        source: clusterSource,
-        style: function(feature) {
-            var size = feature.get('features').length;
-            return new ol.style.Style({
-                image: new ol.style.Circle({
-                    radius: 10,
-                    stroke: new ol.style.Stroke({
-                        color: '#fff'
-                    }),
-                    fill: new ol.style.Fill({
-                        color: '#3399CC'
-                    })
-                }),
-                text: new ol.style.Text({
-                    text: size.toString(),
-                    fill: new ol.style.Fill({
-                        color: '#fff'
-                    })
-                })
-            });
-        }
-    });
-
-    // the source for all the images is OpenStreetMap
-    var raster = new ol.layer.Tile({
-        source: new ol.source.OSM()
-    });
-
-    // finally: create a map
-    var map = new ol.Map({
-        layers: [raster, clusters],
-        controls: ol.control.defaults().extend([
-            new ol.control.FullScreen() 
-        ]),
-        target: 'map',
-        view: new ol.View({
-            center: [0, 0],
-            zoom: 2
-        })
-    });
-</script>
+</div>
 {% endblock %}
+
+{% block extrascripts %}
+    <script type="text/javascript">
+        window.atlas_people_coords = {{ people_coords }};
+    </script>
+    {% render_bundle "atlas" "js" %}
+{% endblock %}
+
