--- a/atlas/templates/atlas/search.html
+++ b/atlas/templates/atlas/search.html
@@ -30,7 +30,7 @@ Jacobs Alumni Search - {{query}}
             <tbody>
             {% for alumni in page %}
                 <tr>
-                    <td><a href="{% url 'atlas_profile' id=alumni.profile.id %}">{{ alumni.givenName }} {{ alumni.familyName }}</a></td>
+                    <td><a href="{% url 'atlas_profile' id=alumni.profile.id %}" class='search_result_link'>{{ alumni.givenName }} {{ alumni.familyName }}</a></td>
                     <td>
                         {% if alumni.jacobs.degree %}
                             {{ alumni.jacobs|get_choice_field:"degree"|safe }}, 
