--- a/payments/templates/payments/view.html
+++ b/payments/templates/payments/view.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if admin %}{% else %}
-    {% include "portal/approval_warning.html" %}
+    {% include "portal/membership_warning.html" %}
 {% endif %}
 
 {% if error %}
