--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-{% include "portal/approval_warning.html" %}
+{% include "portal/membership_warning.html" %}
 
 <div>
     <form class="uk-form-horizontal" method="POST">
