--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -9,7 +9,7 @@
     This is where you can view and edit your membership information.
 </p>
 
-{% include "portal/approval_warning.html" %}
+{% include "portal/membership_warning.html" %}
 {% include "portal/announcements.html" %}
 
 <div class="uk-grid uk-child-width-1-2@m">
