Better information when up or downgrading

--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -93,10 +93,12 @@
             </li>
             <li>
                 When switching between paid tiers, your existing payment method will be reused and the payment cycle remains the same. <br />
-                Depending on when during the yearly payment cycle you change your membership, the membership fee will be calculated as a combination of the old and new price.
+                This means you will not be charged with new fees until the next anniversary of your membership. <br />
+                Depending on when during the yearly payment cycle you change your membership, the membership fee will be calculated as a combination of the old and new price. <br />
             </li>
             <li>
                 If you decide to downgrade to the starter tier, your subscription will be cancelled immediately and your payment methods will be deleted. <br />
+                When downgrading, no refunds will be issued. <br />
             </li>
         {% else %}
             <li>
