--- a/custom_auth/templates/auth/token_login.html
+++ b/custom_auth/templates/auth/token_login.html
@@ -7,7 +7,7 @@
 
 {% block head %}
 {% if not error %}
-    {% render_entrypoint "token_login" %}
+    {% render_entrypoint "custom_auth__token_login" %}
 {% endif %}
 {% endblock %}
 
