--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -118,5 +118,5 @@
         window.tier_next_text = "{{ next_text | escapejs }}";
         window.tier_confirm_text = "{{ confirm_text | escapejs }}";
     </script>
-    {% render_entrypoint "tier" "js" %}
+    {% render_entrypoint "payments__tier" "js" %}
 {% endblock %}
