--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -16,7 +16,7 @@
 
         <link rel="icon" type="image/png" href="{%  static "media/favicon.png" %}" />
         
-        {% render_entrypoint "base" "css" %}
+        {% render_entrypoint "base__base" "css" %}
 
         <script type='text/javascript'>window.jsTestModeFlag = {% if js_test_mode_flag %}true{% else %}false{% endif %};</script>
 
@@ -57,7 +57,7 @@
         {% endblock %}
 
         {% block scripts %}
-            {% render_entrypoint "base" "js" %}
+            {% render_entrypoint "base__base" "js" %}
             {% block extrascripts %}{% endblock %}
         {% endblock %}
     </body>
