Change organization -> association

--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <p class="uk-article-lead">
-    Welcome to the membership portal of the Jacobs University Bremen Alumni organisation.
+    Welcome to the membership portal of the Jacobs University Bremen Alumni Association.
     This is where you can view and edit your membership information.
 </p>
 
