--- a/registry/templates/portal/parts/skills.html
+++ b/registry/templates/portal/parts/skills.html
@@ -32,7 +32,7 @@
                 {% if user.alumni.skills.areasOfInterest %}
                     <tr>
                         <td>Areas of Interest</td>
-                        <td>{{ user.alumni.skills.areasOfInterest|safe }}</td>
+                        <td>{{ user.alumni.skills.areasOfInterest }}</td>
                     </tr>
                 {% endif %}
             </tbody>
