--- a/atlas/templates/atlas/search.html
+++ b/atlas/templates/atlas/search.html
@@ -33,10 +33,10 @@ Jacobs Alumni Search - {{query}}
                     <td><a href="{% url 'atlas_profile' id=alumni.profile.id %}" class='search_result_link'>{{ alumni.givenName }} {{ alumni.familyName }}</a></td>
                     <td>
                         {% if alumni.jacobs.degree %}
-                            {{ alumni.jacobs|get_choice_field:"degree"|safe }}, 
+                            {{ alumni.jacobs|get_choice_field:"degree" }}, 
                         {% endif %}
         
-                        {{ alumni.jacobs|get_choice_field:"graduation"|safe }}
+                        {{ alumni.jacobs|get_choice_field:"graduation" }}
                     </td>
                     <td> {{ alumni.address.city }}, {{ alumni.address.country }} </td>
                 </tr>
