Update Atlas denied page
Alumni now need to enter an adress to be visible.

--- a/atlas/templates/atlas/denied.html
+++ b/atlas/templates/atlas/denied.html
@@ -12,6 +12,7 @@
     <p style="text-align: center; ">
             We are sorry but you don't have access to the Jacobs Alumni Atlas yet. 
             To use the Atlas, please <a href="{% url "edit_atlas" %}">edit your settings</a> and select the option to be included in the Alumni Atlas. 
+            Furthermore, please enter a <a href="{% url "edit_address" %}">valid address</a> so that the atlas can place you on the map. 
             After that, you will be able to access the Alumni Atlas via a button in the upper right corner of your screen.
     </p>
 </div>
