Update vote template

--- a/registry/templates/portal/vote.html
+++ b/registry/templates/portal/vote.html
@@ -17,7 +17,7 @@
 {% include "portal/approval_warning.html" %}
 {% include "portal/announcements.html" %}
 
-<div class="uk-grid uk-child-width-1-2@m">
+<div class="uk-grid uk-child-width-1-1">
     {% for obj in links %}
     <div class="uk-card uk-card-default">
         <div class="uk-card-header">
