Add version indication to all portal pages

--- a/MemberManagement/templates/base/footer.html
+++ b/MemberManagement/templates/base/footer.html
@@ -15,4 +15,9 @@
          {% include "base/footer_legal.html" %}
       </div>
    </div>
+   <div class="uk-grid uk-margin-small-bottom uk-child-width-1-2@m uk-child-1-1@s" uk-grid="true">
+      <div>
+         <span class="uk-text-small">{{ portal_version|default:"unknown" }}</span>
+      </div>
+   </div>
 </footer>
