Print portal version in generated receipts

--- a/donation_receipts/templates/donation_receipts/receipt_pdf.html
+++ b/donation_receipts/templates/donation_receipts/receipt_pdf.html
@@ -205,7 +205,7 @@
     </section>
 
     <section class="s grey">
-        {{ receipt.external_id }}
+        1;{{ portal_version }};{{ receipt.external_id }}
     </section>
 </body>
 </html>
