--- a/MemberManagement/templates/base/header_menu.html
+++ b/MemberManagement/templates/base/header_menu.html
@@ -2,5 +2,6 @@
 <li class="hoverable"><a href="{% url 'portal' %}">Profile</a></li>
 {% if can_view_atlas %}<li class="hoverable"><a href="{% url 'atlas_home' %}">Atlas</a></li>{% endif %}
 {% if not user.is_authenticated %}<li class="hoverable"><a class="uk-active" href="{% url 'login' %}">Login</a></li>{% endif %}
+{% if user.is_authenticated%}<li class="hoverable"><a class="uk-active" href="{% url 'list' %}">Donation Receipts</a></li>{% endif %}
 {% if user.is_staff %}<li class="hoverable"><a href="{% url 'admin:index' %}">Django Admin</a></li>{% endif %}
 {% if user.is_impersonate %}<li class="hoverable"><a href="{% url 'impersonate-stop' %}">Stop Impersonating</a></li>{% endif %}
