--- a/donation_receipts/templates/donation_receipts/list.html
+++ b/donation_receipts/templates/donation_receipts/list.html
@@ -13,6 +13,8 @@ Your Donation Receipts
     {% if not object_list %}
     <p>There are no receipts available for you right now. If you just made a donation, please wait a few days.</p>
     {% else %}
+    <p>The receipts listed below includes all contributions we've been able to attribute to you. This also includes 
+        your yearly membership payment.</p>
     <table class="uk-table uk-table-small">
         <thead>
             <tr>
@@ -32,6 +34,7 @@ Your Donation Receipts
         </tbody>
     </table>
     {% endif %}
+    <p>If one of your donations is not listed, please contact <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.</p>
 </div>
 
 {% endblock %}
