Update text to reflect changes

--- a/payments/templates/payments/view/004_info_stripe.html
+++ b/payments/templates/payments/view/004_info_stripe.html
@@ -6,7 +6,7 @@
         <p>
             All payment information labeled {% include "payments/stripe_bage.html" %} is securely stored with our payment provider, <a href="https://stripe.com/">Stripe</a>. 
             Stripe is <b>fully compliant with industry security standards</b> (certified PCI Level 1 Service Provider) and used by companies and nonprofits alike (e.g. Unicef, Booking.com, Indiegogo).
-            We do not have a copy of your payment method (e.g. credit card number, card expiry date, CVV or bank account details) or payment history (i.e. past invoices) on our server. 
+            We do not have a copy of your payment method (e.g. credit card number, card expiry date, CVV or bank account details on our server. To allow us to issue donation receipts, we store a copy of your payment history on our server. This only includes required data as outlined in our <a href="˜{% url 'privacy' %}">privacy policy</a>.
         </p>
         <!--
             <p>
