--- a/donation_receipts/templates/emails/new_receipt.html
+++ b/donation_receipts/templates/emails/new_receipt.html
@@ -3,7 +3,7 @@
 {% block content %}
 <p>
     Dear {{ receipt.email_name }}, <br /><br />
-    thank you for your contribution to the Alumni Association.
+    Thank you for your contribution to the Alumni Association.
 </p>
 <p>
     Your donation is fully tax-deductible in Germany!
