Show banner for EU cards
This commit shows a banner that informs alumni that EU cards are
currently not supported.

--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -91,6 +91,14 @@
 
             <!-- Elements for Card -->
             <div id="stripe-card-elements" style='display: none; '>
+
+                <div class="uk-form-controls uk-form-controls-text uk-alert-danger" uk-alert>
+                    Due to recent changes in EU law using european credit cards is currently not recommended. 
+                    Please use a SEPA bank account if you can. 
+                    If you absolutely need to use a credit card, you can email us via <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
+                    We are working on making credit cards available to everyone again.
+                </div>
+                
                 <label for="card-element" class="uk-form-label">
                     Credit or debit card *
                 </label>
